Bug UEFA wrong position of Won Matches and CSS style
Bug UEFA wrong position of Won Matches and CSS style

--- a/WebSite/css/style.css
+++ b/WebSite/css/style.css
@@ -22,6 +22,10 @@ li
 	list-style-type: none;
 	margin: 0;
 }
+a:hover
+{
+	background-color: #0096FF;	
+}
 a:visited 
 {
 	color: white;	
